--- a/consultations.html
+++ b/consultations.html
@@ -7,13 +7,15 @@ image: banner.jpg
 <h2>CONSULTATIONS</h2>
   
 I'm available to give expert advice, professional direction and actionable instruction to all guitarists and musicians seeking 
-direction or clarity. With my experience, knowledge and proven  I'd love to lend a hand or an ear in helping you reach your goals. 
+direction or clarity in regards to setting and conquering goals, guitar playing in general and musical ambition. With my 
+knowledge and real-life experiences, I can definitely and would love to lend a hand or an ear in helping you reach your goals...and have fun while doing it. 
 <br /><br />
-Need to talk music or guitar with an expert? Is there something you'd like to ask? Do you need advice? Need a guitar specialist? Is there something you'd like to know? Is there something you'd like explained or demystified, 
-regarding any aspect of the guitar? Is there a burning question tht you wish an expert would not only answer but actually go 
-into detail when it comes to guitar? Need some guitar improvement help? Development? Consult with Gian today.
-
-
+I sharpened my teeth by playing countless shows at numerous venues all across the country and met the most intuitive musician minds
+all along my travels. I became a guitar master because of these experiences. I also ran a rock/metal magazine that gave me the view from
+the other side and gave me a different perspective of the music industry, sharpening my teeth further as a professional musician and 
+guitar master. 
+<br /><br />
+Below, are some example topics that we can cover. 
 <br /><br />
 <h5>TOPIC EXAMPLES:</h5>
 <ul>
@@ -24,14 +26,12 @@ into detail when it comes to guitar? Need some guitar improvement help? Developm
   <li>How to sing while playing guitar</li>
   <li>The correct way to practice and why</li>
   <li>Choosing the correct songs that cater to your musical strengths</li>
-  
-<li>Professional Opinion</li>
-<li>Knowledgeable</li>
-<li>Experienced</li>
-<li>Expert Advice</li>
-<li>Out of the Box</li>
-<li>Strategic</li>
-<li>Decision </li>
-<li>Specialist</li>
+  <li>Social Media best practices</li>
+  <li>Out of the box ideas</li>
+  <li>Strategic performing</li>
+  <li>Electric or Acoustic?</li>
 </ul>  
+<br /><br />
+Get in contact today and consult with Gian.
+
 
