--- a/consultations.html
+++ b/consultations.html
@@ -31,7 +31,48 @@ Below, are some example topics that we can cover.
   <li>Strategic performing</li>
   <li>Electric or Acoustic?</li>
 </ul>  
-<br /><br />
+<br />
 Get in contact today and consult with Gian.
+<br />
+<br /><br />
+	<form method="post" action="https://formspree.io/gtrsage@gmail.com">
+		<div class="row uniform">
+			<div class="6u 12u$(xsmall)">
+				<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name" />
+			</div>
+			<div class="6u$ 12u$(xsmall)">
+				<input type="email" name="demo-email" id="demo-email" value="" placeholder="Email" />
+			</div>
+			<div class="12u$">
+				<div class="select-wrapper">
+					<select name="demo-category" id="demo-category">
+						<option value="">- Category -</option>
+						<option value="1">General</option>
+						<option value="1">Guitar Lessons</option>
+						<option value="1">Sessions</option>
+						<option value="1">Media/Advertising</option>
+						<option value="1">Other</option>
+					</select>
+				</div>
+			</div>
+			<div class="6u 12u$(small)">
+				<input type="checkbox" id="demo-copy" name="demo-copy">
+				<label for="demo-copy">Email me a copy</label>
+			</div>
+			<div class="6u$ 12u$(small)">
+				<input type="checkbox" id="demo-human" name="demo-human" checked>
+				<label for="demo-human">Not a robot</label>
+			</div>
+			<div class="12u$">
+				<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
+			</div>
+			<div class="12u$">
+				<ul class="actions">
+					<li><input type="submit" value="Send Message" class="special" /></li>
+					<li><input type="reset" value="Reset" /></li>
+				</ul>
+			</div>
+		</div>
+	</form>
 
 
