--- a/faq.html
+++ b/faq.html
@@ -3,15 +3,15 @@ layout: page
 title: FAQ/Policy
 image: home.JPG
 ---
-<h2>FAQ/Policy</h2>
+<h2>FAQ/Lesson Policy</h2>
 
-<h3 style="color: #1884BB">POLICY</h3>
+<h3 style="color: #1884BB">LESSONS POLICY</h3>
 
 <button class="accordion">PAYMENT AND PRE-PAYMENTS</button>
 <div class="panel">
-  <p>Lessons are sold in blocks of 2 lessons. In the 1st session, the student and instructor meet and greet and decide and that end of 
+  <p>Lessons are sold on a monthly basis. In the 1st session, the student and instructor meet and greet and decide at end of 
     discussions whether its a good fit for both and move forward. All lessons are charged prior to the lesson. Purchased lessons 
-    expire 4 months from the date of purchase unless plans have been made with instructor prior expiration. </p>
+    expire 4 months from the date of purchase unless plans have been made with instructor prior to expiration. </p>
 </div>
 
 <button class="accordion">STUDENT PROMISE</button>
