--- a/faq.html
+++ b/faq.html
@@ -108,6 +108,9 @@ image: home.JPG
   <p>I'm a rocker by heart but also focus on pop, metal, folk, punk, funk, soul, oldies, classic rock and much more.</p>
 </div>
 
+If you didn't find the answer above or have more questions regarding any of the services I offer, please feel free to contact me.
+Feel free to email gtrsage@gmail.com or use the <a href="https://gianguitar.com/contact">Contact form</a>. 
+
 <script>
 var acc = document.getElementsByClassName("accordion");
 var i;
