--- a/faq.html
+++ b/faq.html
@@ -111,6 +111,9 @@ image: home.JPG
 If you didn't find the answer above or have more questions regarding any of the services I offer, please feel free to contact me.
 Feel free to email gtrsage@gmail.com or use the <a href="https://gianguitar.com/contact">Contact form</a>. 
 
+Please feel free to email me as well if you have any comments, concerns, things you'd love for me to check out, guitar jokes,
+guitar news, events, etc.
+
 <script>
 var acc = document.getElementsByClassName("accordion");
 var i;
