--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,6 @@ image: IMG_E0647.JPG
 
 <section>
 	<h2>CONTACT</h2>
-	Get in contact with Gian today.
 	<br /><br />
 	<form method="post" action="https://formspree.io/gtrsage@gmail.com">
 		<div class="row uniform">
@@ -47,5 +46,8 @@ image: IMG_E0647.JPG
 			</div>
 		</div>
 	</form>
+	Email: gtrsage@gmail.com<br />
+	Skype: gtrsage
+        
 </section>
 
