--- a/faq.html
+++ b/faq.html
@@ -107,10 +107,11 @@ image: home.JPG
 <div class="panel">
   <p>I'm a rocker by heart but also focus on pop, metal, folk, punk, funk, soul, oldies, classic rock and much more.</p>
 </div>
-
+<br /><br />
 If you didn't find the answer above or have more questions regarding any of the services I offer, please feel free to contact me.
-Feel free to email gtrsage@gmail.com or use the <a href="https://gianguitar.com/contact">Contact form</a>. 
-
+<br /><br />
+Please use gtrsage@gmail.com or use the <a href="https://gianguitar.com/contact">Contact form</a>. 
+<br /><br />
 Please feel free to email me as well if you have any comments, concerns, things you'd love for me to check out, guitar jokes,
 guitar news, events, etc.
 
