--- a/about.html
+++ b/about.html
@@ -5,9 +5,9 @@ image: IMG_E1216.JPG
 ---
 <h2>ABOUT</h2>
 <br />
-Over the span of 26 years, I’ve built my reputation as an expert on the art of guitar. After years of touring, recording, performing, consulting and mentoring,
-I've decided to expand my method to help students understand the art of learning how to play guitar. I provide great care in making sure 
-you learn how to play guitar in the most efficient and effective manner. 
+Over the span of 26 years, I’ve built my reputation as an expert on the art of guitar. After years of touring, recording, performing, coaching, consulting and mentoring,
+I've decided to expand my services to help students understand the art of learning how to play guitar. I provide great care in making sure 
+you learn how to play guitar in an efficient and effective manner. 
 <br /><br />
 I am 100% original and uphold my style, work quality and statement.
 <br /><br />
@@ -58,5 +58,7 @@ Sign up today and let me be your guide on your learning how to play guitar journ
 		</div>
 	</form>
 <br /><br />
-For more info regarding the services I provide: 
+For more info regarding more services I provide: 
 <a href="mailto:gtrsage@gmail.com"> gtrsage@gmail.com</a>
+<br /><br />
+I also provide great care in helping my patrons navigate through their musical aspirations, ambitions and journey. Read more about these services I offer in the <a href="https://www.gianguitar.com/consultations/">Consultations</a> and <a href="https://www.gianguitar.com/sessions/">Sessions</a> pages.
