--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@ image: IMG_E1216.JPG
 ---
 <h2>ABOUT</h2>
 <br />
+Expert in Guitar Development, Instruction & Songwriting. 
+<br /><br />
 Over the span of 26 years, I’ve built my reputation as an expert on the art of guitar. After years of touring, recording, performing, coaching, consulting and mentoring,
 I've decided to expand my services to help students understand the art of learning how to play guitar. I provide great care in making sure 
 you learn how to play guitar in an efficient and effective manner. 
