--- a/lessons.html
+++ b/lessons.html
@@ -89,25 +89,25 @@ Here's what you'll need to get started:
 <input type="hidden" name="bn" value="PP-BuyNowBF:btn_buynowCC_LG.gif:NonHostedGuest">
 <table>
 <tr><td><input type="hidden" name="on0" value="Options">Options</td></tr><tr><td><select name="os0">
-	<option value="30 Mins. - Guitar Lesson">30 Mins. - Guitar Lesson $50.00 USD</option>
-	<option value="1 Hour - Guitar Lesson">1 Hour - Guitar Lesson $100.00 USD</option>
-	<option value="30 Mins. - Consultation">30 Mins. - Consultation $60.00 USD</option>
+	<option value="30 Mins. - Guitar Lesson">30 Mins. - Guitar Lesson $35.00 USD</option>
+	<option value="1 Hour - Guitar Lesson">1 Hour - Guitar Lesson $60.00 USD</option>
+	<option value="30 Mins. - Consultation">30 Mins. - Consultation $40.00 USD</option>
 </select> </td></tr>
 <tr><td><input type="hidden" name="on1" value="Full Name">Full Name</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
 </table>
 <input type="hidden" name="option_select0" value="30 Mins. - Guitar Lesson">
-<input type="hidden" name="option_amount0" value="50.00">
+<input type="hidden" name="option_amount0" value="35.00">
 <input type="hidden" name="option_select1" value="1 Hour - Guitar Lesson">
-<input type="hidden" name="option_amount1" value="100.00">
+<input type="hidden" name="option_amount1" value="60.00">
 <input type="hidden" name="option_select2" value="30 Mins. - Consultation">
-<input type="hidden" name="option_amount2" value="60.00">
+<input type="hidden" name="option_amount2" value="40.00">
 <input type="hidden" name="option_index" value="0">
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
 
 	
-Contact me today and let's get you started on your guitar journey!
+Let's get you started on your guitar journey!
 <br /><br />
 <h3 style="color:#198DC6">Video Series</h3>
 <br />
