--- a/contact.html
+++ b/contact.html
@@ -19,11 +19,13 @@ image: IMG_E0647.JPG
 				<div class="select-wrapper">
 					<select name="demo-category" id="demo-category">
 						<option value="">- Category -</option>
-						<option value="1">General</option>
-						<option value="1">Guitar Lessons</option>
-						<option value="1">Sessions</option>
-						<option value="1">Media/Advertising</option>
-						<option value="1">Other</option>
+						<option value="general">General</option>
+						<option value="development">Guitar Development</option>
+						<option value="writing">Writing/Blogging</option>
+						<option value="consultation">Consultation</option>
+						<option value="sessions">Sessions</option>
+						<option value="media">Media/Advertising</option>
+						<option value="other">Other</option>
 					</select>
 				</div>
 			</div>
@@ -46,8 +48,7 @@ image: IMG_E0647.JPG
 			</div>
 		</div>
 	</form>
-	Email: gtrsage@gmail.com<br />
-	Skype: gtrsage
+	Email: <a href="mailto:soundsbygian@gmail.com">soundsbygian@gmail.com</a><br />
         
 </section>
 
