--- a/about.html
+++ b/about.html
@@ -5,11 +5,10 @@ image: IMG_E1216.JPG
 ---
 <h2>ABOUT</h2>
 <br />
-Expert in Guitar Development, Instruction & Songwriting. 
+Expert in Guitar Development, Songwriting & Writing. 
 <br /><br />
-Over the span of 26 years, I’ve built my reputation as an expert on the art of guitar. After years of touring, recording, performing, coaching, consulting and mentoring,
-I've decided to expand my services to help students understand the art of learning how to play guitar. I provide great care in making sure 
-you learn how to play guitar in an efficient and effective manner. 
+Over the span of 26 years, I’ve built my reputation as an expert on the art of guitar, songwriting and writing. After years of recording, performing, coaching, consulting and mentoring,
+I've decided to expand my services to help students understand the art of learning how to play guitar. I provide great care in the work that I do. 
 <br /><br />
 I am 100% original and uphold my style, work quality and statement.
 <br /><br />
@@ -32,11 +31,13 @@ Sign up today and let me be your guide on your learning how to play guitar journ
 				<div class="select-wrapper">
 					<select name="demo-category" id="demo-category">
 						<option value="">- Category -</option>
-						<option value="1">General</option>
-						<option value="1">Guitar Lessons</option>
-						<option value="1">Sessions</option>
-						<option value="1">Media/Advertising</option>
-						<option value="1">Other</option>
+						<option value="general">General</option>
+						<option value="development">Guitar Development</option>
+						<option value="blogging">Writing/Blogging</option>
+						<option value="sessions">Consultations</option>
+						<option value="sessions">Sessions</option>
+						<option value="advertising">Media/Advertising</option>
+						<option value="other">Other</option>
 					</select>
 				</div>
 			</div>
@@ -61,6 +62,6 @@ Sign up today and let me be your guide on your learning how to play guitar journ
 	</form>
 <br /><br />
 For more info regarding more services I provide: 
-<a href="mailto:gtrsage@gmail.com"> gtrsage@gmail.com</a>
+<a href="mailto:soundsbygian@gmail.com"> soundsbygian@gmail.com</a>
 <br /><br />
 I also provide great care in helping my patrons navigate through their musical aspirations, ambitions and journey. Read more about these services I offer in the <a href="https://www.gianguitar.com/consultations/">Consultations</a> and <a href="https://www.gianguitar.com/sessions/">Sessions</a> pages.
