--- a/about.html
+++ b/about.html
@@ -7,16 +7,12 @@ image: IMG_E1216.JPG
 <br />
 Expert in Guitar Development, Songwriting & Writing. 
 <br /><br />
-Over the span of 26 years, I’ve built my reputation as an expert on the art of guitar, songwriting and writing. After years of recording, performing, coaching, consulting and mentoring,
-I've decided to expand my services to help students understand the art of learning how to play guitar. I provide great care in the work that I do. 
+Over the span of 26 years, I’ve built my reputation as an expert on the art of guitar, songwriting and writing. Through years and years of recording, performing, writing, blogging, coaching, consulting and mentoring,
+I cultivated a unique set of skills, guilded from different trades. I provide great care in navigating the patrons needs whether its help with songwriting concepts, writing off-the-cuff or understanding the art of guitar. 
 <br /><br />
 I am 100% original and uphold my style, work quality and statement.
 <br /><br />
-I teach from the heart and soul and wouldn't do it any other way. Learning how to play the guitar is a life-long journey and I'm here
-to guide you through these exciting and adventurous times! I've tweaked things, focused on this, got rid of that and created a method that
-will basically guide you into becoming a full-fledged master guitarist while having fun doing it. Sounds amazing right? It can be you.
-<br /><br />
-Sign up today and let me be your guide on your learning how to play guitar journey!
+
 <br /><br />
 <h4>CONTACT</h4>
 	<form method="post" action="https://formspree.io/gtrsage@gmail.com">
