--- a/about.html
+++ b/about.html
@@ -13,7 +13,6 @@ I cultivated a unique set of skills, guilded from different trades. I provide gr
 I am 100% original and uphold my style, work quality and statement.
 <br /><br />
 
-<br /><br />
 <h4>CONTACT</h4>
 	<form method="post" action="https://formspree.io/gtrsage@gmail.com">
 		<div class="row uniform">
@@ -60,4 +59,4 @@ I am 100% original and uphold my style, work quality and statement.
 For more info regarding more services I provide: 
 <a href="mailto:soundsbygian@gmail.com"> soundsbygian@gmail.com</a>
 <br /><br />
-I also provide great care in helping my patrons navigate through their musical aspirations, ambitions and journey. Read more about these services I offer in the <a href="https://www.gianguitar.com/consultations/">Consultations</a> and <a href="https://www.gianguitar.com/sessions/">Sessions</a> pages.
+Read more about these services I offer in the <a href="https://www.gianguitar.com/consultations/">Consultations</a> and <a href="https://www.gianguitar.com/sessions/">Sessions</a> pages.
