--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ image: IMG_E1216.JPG
 Expert in Guitar Development, Songwriting & Writing. 
 <br /><br />
 Over the span of 26 years, I’ve built my reputation as an expert on the art of guitar, songwriting and writing. I cultivated, honed and mastered a unique set of skills, guilded from different trades, through years and years of recording, performing, writing, blogging, web developing, coaching, consulting and mentoring. 
-I provide great care in navigating the patrons needs whether its help with songwriting concepts, writing off-the-cuff or understanding the art of guitar. 
+I provide great care in navigating the patrons needs whether its help with songwriting concepts, website developing, writing off-the-cuff or understanding the art of guitar. 
 <br /><br />
 I am 100% original and uphold my style, work quality and statement.
 <br /><br />
