--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ I am 100% original and uphold my style, work quality and statement.
 Read more about these services I offer in the <a href="https://www.gianguitar.com/consultations/">Consultations</a> and <a href="https://www.gianguitar.com/sessions/">Sessions</a> pages.
 <br /><br />
 <h4>CONTACT</h4>
-	<form method="post" action="https://formspree.io/gtrsage@gmail.com">
+	<form method="post" action="https://formspree.io/soundsbygian@gmail.com">
 		<div class="row uniform">
 			<div class="6u 12u$(xsmall)">
 				<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name" />
