--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@ image: IMG_E0647.JPG
 <section>
 	<h2>CONTACT</h2>
 	<br /><br />
-	<form method="post" action="https://formspree.io/gtrsage@gmail.com">
+	<form method="post" action="https://formspree.io/soundsbygian@gmail.com">
 		<div class="row uniform">
 			<div class="6u 12u$(xsmall)">
 				<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name" />
